cleaning up the benchmarks

--- a/main.tex
+++ b/main.tex
@@ -97,7 +97,7 @@ We present Chipmunk, a concretely efficient lattice-based multi-signature scheme
 Chipmunk allows for non-interactive aggregation of signatures and is secure against rogue-key attacks.
 The construction is plausibly secure against quantum adversaries as our security relies on the assumed hardness of the short integer solution problem.
 
-We significantly improve upon the previously best known construction in this setting by Fleischhacker, Simkin, Zhang (CCS 2022).
+We significantly improve upon the previously best known construction in this setting by Fleischhacker, Simkin, and Zhang (CCS 2022).
 Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size less than $200$ KB.
 We provide a full implementation of Chipmunk and provide extensive benchmarks studying our construction's efficiency.
 
