--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -136,14 +136,13 @@ We conclude that the key generation time is no longer a bottleneck for practical
   {0.49\textwidth}    \centering
   \includegraphics[trim={1mm 0 4mm 0},clip,width=\textwidth]{figures/key_gen.eps}\\
   \caption{Chipmunk key generations time.}
-  \label{fig:keygen}
   \end{subfigure}
 \begin{subfigure}[b]{0.49\textwidth}    \centering
   \includegraphics[trim={1mm 0 4mm 0},clip,width=\textwidth]{figures/sig_size.eps}\\
   \caption{Chipmunk aggregated signature size}
   \label{fig:sigize}
   \end{subfigure}
-  \caption{Plots showing the scaling characteristics of the key generation time and aggregated signature size of Chipmunk.}
+  \caption{Plots showing the scaling characteristics of the key generation time and aggregated signature size of Chipmunk.} \label{fig:keygen}
 \end{figure}
 
 \subsubsection{One Aggregate Signature under the Microscope.}
