--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -71,3 +71,17 @@
 \newcommand{\zip}{\mathsf{zip}}
 
 \newcommand{\nnote}[1]{{\color{red}[\textbf{Nils} #1 ]}}
+\newcommand{\gnote}[1]{{\color{red}[\textbf{Gotti:} #1]}}
+\newcommand{\interval}[1]{[#1]}
+
+% spaces
+
+\newcommand{\moddomain}{A_{\mathsf{dom}}}
+\newcommand{\modcommit}{A_{\mathsf{com}}}
+\newcommand{\modopening}{A_{\mathsf{op}}}
+\newcommand{\hashajtai}{h_\mathrm{Ajtai}}
+\newcommand{\limbs}{\gamma}
+% Use inside inkscape svg. This uses lots of LaTeX commands because the svg get messy otherwise.
+\newcommand{\NODE}[1]{\ensuremath{v_{\scriptscriptstyle #1}}}
+\newcommand{\MSG}[1]{\ensuremath{{\scriptstyle m}_{\scriptscriptstyle #1}}}
+\newcommand{\MSGU}[1]{\ensuremath{{\scriptstyle u}_{\scriptscriptstyle #1}}} % decomposed message
