--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -8,7 +8,7 @@ An algorithm is PPT if it is modeled by a probabilistic Turing machine with a ru
 
 Let $X$ be a set.
 We write $x\gets X$ for the process of sampling an element of $X$ uniformly at random.
-Let $n\in\NN$, we denote by $[n]$ the set $\{1,\dots,n\}$.
+Let $n\in\NN$, we denote by $\interval{n}$ the set $\{1,\dots,n\}$.
 Let $T$ be a full binary tree of depth $d$.
 We denote the root node of $T$ by the empty string $\epsilon$, and for any node $v$, $v\concat 0$ and $v\concat 1$ denotes the left and right child of $v$ respectively.
 In particular, $\bin^d$ is the set of leaves of $T$.
@@ -26,17 +26,23 @@ We define the function $\zip$ that \enquote{zips} up two vectors into a single v
 \vdots\\
 (a_\ell,b_\ell) \end{pmatrix}.\]
 
-Without loss of generality, we work on a power-of-two cyclotomic polynomial ring.
-Let $\Phi_{2n} = x^n+1$ the cyclotomic polynomial with $n$ a power of 2. 
- We work in a polynomial ring $\ring =  \ZZ[x]/\langle x^n+1\rangle$ and represent elements of $\ring$ as $n$-dimensional vectors $\ZZ^n$ with $(c_0,\dots,c_{n-1})^\intercal\in \ZZ^n$ representing the ring element $\sum_{i=0}^{n-1} x^i \cdot c_i$.
+% Without loss of generality, we work on a power-of-two cyclotomic polynomial ring.
+Our concrete construction works over a power-of-two cyclotomic polynomial ring.
+Let $\Phi_{2n} = x^n+1$ be the cyclotomic polynomial with $n$ a power of 2. 
+We work in the polynomial ring $\ring =  \ZZ[x]/\langle x^n+1\rangle$ and represent elements of $\ring$ as $n$-dimensional vectors $\ZZ^n$ with $(c_0,\dots,c_{n-1})^\intercal\in \ZZ^n$ representing the ring element $\sum_{i=0}^{n-1} x^i \cdot c_i$.
+For any odd prime number $q$, we always represent $\ZZ_q$ by the set $\{-\tfrac{q-1}{2},\ldots,\tfrac{q-1}{2}\}$ centered around 0.
 Let $q$  be some prime such that $q \equiv 1 \bmod 2n$.
-$\ring_q$ refers to the subset of $\ring$ represented by vectors in $\ZZ_q^n$.
-Let $x = \vec{c} \in \ring$ be a ring element. We denote $\norm{x} = \norm{\vec{c}}_\infty = \max_{i\in[n-1]}\abs{c_i}$ and $\norm{x}_1 = \norm{\vec{c}}_1 = \sum_{i\in[n-1]}\abs{x_i}$.
-For an element $a\in\ring_q$ we denote by $\norm{a}$ or $\norm{a}_1$ the respective norm over $\ring$.
+$\ring_q$ refers to the quotient ring of $\ring$ modulo $q$, represented by vectors in $\ZZ_q^n$. We can interpret these as elements from $\ring$ by taking representatives centered around 0 as above.
+Let $x = \vec{c} \in \ring$ be a ring element.
+We define norms $\norm{x} = \norm{\vec{c}}_\infty = \max_{i}\abs{c_i}$ and $\norm{x}_1 = \norm{\vec{c}}_1 = \sum_{i}\abs{x_i}$ on $\ring$ by taking the norm of the coefficient vector in the monomial basis.
+We extend these definitions to norms on $\ring_q$ using coefficients in $\{-\tfrac{q-1}{2},\ldots,\tfrac{q-1}{2}\}$.
 
-We denote by $\ball_\beta$ the ball $\ball_\beta = \{a\in\ring_q\mid \norm{a}\leq\beta\}$ and by $\tern_\alpha = \{a=(a_0+a_1\cdot x + \dots + a_{n-1}x^{n-1}) \in\ring \mid \norm{a}=1 \land \sum_{i=0}^{n-1} |a_i| = \alpha\}$ the set of polynomials with ternary coefficients, i.e. coefficients from $\{-1,0,1\}$, with exactly $\alpha$ non-zero coefficients.
+We denote by $\ball_\beta$ the ball $\ball_\beta = \{a\in\ring_q\mid \norm{a}\leq\beta\}$ and by 
+$\tern_\alpha = \{a=(a_0+a_1\cdot x + \dots + a_{n-1}x^{n-1}) \in\ring \mid \norm{a}_\infty\leq 1 \land \sum_{i=0}^{n-1} |a_i| = \alpha\}$ %Note (Gotti): Making the \infty-norm explicit in \tern, but not in \ball is intentional.
+the set of polynomials with ternary coefficients, i.e. coefficients from $\{-1,0,1\}$, with exactly $\alpha$ non-zero coefficients.
 
-We make regular use of the following simple lemma that allows us to bound the norm of the product of two polynomials.
+Observe that for our choices of ring $\ring$ and norm, for any $a\in\ring$, we have $\norm{a} = \norm{X\cdot a}$, because multiplication by $X$ acts on the coefficient vector as a cyclic shift (up to sign).
+For such rings and norms, we can make use of the following simple lemma that allows us to bound the norm of the product of two polynomials.
 \begin{lemma}[\cite{Mic07}]\label{lem:ternbound}
   Let $a,b\in\ring$ be two polynomials. Then $\norm{b\cdot a} \leq \norm{a}_1\cdot\norm{b}$.
 \end{lemma}
