Some minor TODO notes; LaTeX improvements.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -85,3 +85,6 @@
 \newcommand{\NODE}[1]{\ensuremath{v_{\scriptscriptstyle #1}}}
 \newcommand{\MSG}[1]{\ensuremath{{\scriptstyle m}_{\scriptscriptstyle #1}}}
 \newcommand{\MSGU}[1]{\ensuremath{{\scriptstyle u}_{\scriptscriptstyle #1}}} % decomposed message
+
+% semantic markup
+\newcommand*{\transpose}{\intercal}
