Finished proof of Lemma 15. Split McDiarmid argument into its own lemma (because it's needed twice).

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -72,7 +72,6 @@
 
 \newcommand{\nnote}[1]{{\color{red}[\textbf{Nils} #1 ]}}
 \newcommand{\gnote}[1]{{\color{red}[\textbf{Gotti:} #1]}}
-\newcommand{\interval}[1]{[#1]}
 
 % spaces
 
@@ -81,10 +80,13 @@
 \newcommand{\modopening}{A_{\mathsf{op}}}
 \newcommand{\hashajtai}{h_\mathrm{Ajtai}}
 \newcommand{\limbs}{\gamma}
-% Use inside inkscape svg. This uses lots of LaTeX commands because the svg get messy otherwise.
+% Used inside inkscape svg. This uses lots of LaTeX commands because the svg get messy otherwise.
 \newcommand{\NODE}[1]{\ensuremath{v_{\scriptscriptstyle #1}}}
 \newcommand{\MSG}[1]{\ensuremath{{\scriptstyle m}_{\scriptscriptstyle #1}}}
 \newcommand{\MSGU}[1]{\ensuremath{{\scriptstyle u}_{\scriptscriptstyle #1}}} % decomposed message
 
 % semantic markup
 \newcommand*{\transpose}{\intercal}
+\newcommand*{\ceiled}[1]{\ensuremath{\lceil#1\rceil}}
+\newcommand{\interval}[1]{[#1]}
+
